--- a/templates/report/kmom01.markdown.twig
+++ b/templates/report/kmom01.markdown.twig
@@ -1,3 +1,15 @@
-kmom01
------------------------
+Kmom01
+--------------------------
 
+Jag kan direkt säga att det var ett bra tag sen jag satt och jobbade med just PHP. Men det var skönt att komma tillbaka till det eftersom detta kmom handlade om just bara grunderna inom HTML samt CSS i mestadels av upplägget.
+Den uppfattningen jag har inom just objektorientering är ifrån kursen OOPython som jag har läst nyligen men samtidigt hade vi lite genomgång av det i kursen JavaScript men det var inget som jag fördjupade mig i så mycket just för den stunden för det var inte så behövligt.
+
+Enligt mig så är objektorientering väldigt lik konceptet som vi hade under just Pythonkurserna där man skapar först och främst en klass som fungerar som ett skelett som man bygger på hela tiden. Det kan handla om allt från attribut samt metoder och konstruktor som man tillsätter för just den specifika klassen. Ett objekt är just den yttersta delen av skelettet vi bygger på eftersom det ärver dessa attribut samt metoder från själva klassen. Konstruktorn hjälper oss med att skicka in olika argument för att kunna påverka dessa attribut när själva objektet skapas. Om man ska kunna skapa sin första klass så tycker jag att man ska läsa på lite och fördjupa sig om hur man jobbar inom objektorientering.
+
+Jag tyckte inte att det första kurmomentet/uppgiften var speciellt komplicerat och var mest en "uppfräschning" av hur man bygger upp en sida från grunden så det var inte speciellt mycket om just objekt eller klasser. Jag följde genomgången och började med att skapa en Controller för alla routes som behövdes för report-sidan och resten av momentet var bara finslipning av HTML-koden samt tillsättning av en fin layout genom CSS. Jag tycker att själva strukturen är skön och jobba i och det är en bra grund att förstå hur vi kommer jobba inom det senare delar av kursen.
+
+Jag har tyvärr inte läst igenom något av just "PHP The Right Way" artikeln så jag kan inte säga något vidare om vilka delar av det var intressanta/värda att ta upp.
+
+Min TIL för detta kmom är nog hela detta kursmomentet eftersom det var en bra uppfräschning för mig när det gäller kodningstrukturen inom PHP samt Controller.
+
+--------------------------
