--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
                     <li><a href="{{ url("home") }}">Home</a></li>
                     <li><a href="{{ path("about") }}">About</a></li>
                     <li><a href="{{ path("report") }}">Report</a></li>
+                    <li><a href="{{ path("card-home")}}">Card</a></li>
                 </ul>
             </nav>
         </div>
